<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="setModel"
            type="com.cloudcreativity.storage.ui.main.SettingModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tlb_setting"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/str_setting"
            android:elevation="3dip"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <!--content widgets-->
        <FrameLayout
            android:background="@color/white"
            android:padding="15dip"
            android:onClick="@{()->setModel.onClearCacheClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/str_app_cache"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@{setModel.cache}"/>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <FrameLayout
            android:background="@color/white"
            android:padding="15dip"
            android:onClick="@{()->setModel.onVersionClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/str_app_version"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@{setModel.version}"
                android:textSize="16sp"/>
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <FrameLayout
            android:background="@color/white"
            android:padding="15dip"
            android:onClick="@{()->setModel.onHelpClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/str_system_help"/>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:textSize="16sp"/>
        </FrameLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RedButton"
            android:textColor="@color/white"
            android:text="@string/str_exit_login"
            android:onClick="@{()->setModel.onExitLoginClick()}"
            android:textSize="16sp"
            android:layout_margin="15dip"/>
    </LinearLayout>
</layout>