<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loginModel"
            type="com.cloudcreativity.storage.ui.loginAndRegister.LoginModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/dl_bg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="?attr/actionBarSize">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dip"
                android:onClick="@{()->loginModel.onBack()}"
                android:padding="5dip"
                android:src="@drawable/ic_arrow_back_white_24dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dip"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/gray_f1f1f1"
                    android:text="兰州大学后勤保障部\n智能仓储系统"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dip"
                android:padding="15dip"
                android:background="@drawable/login_bg"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_role"
                    android:spinnerMode="dropdown"
                    android:entries="@array/role"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!--content widgets-->
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_phone"
                    android:layout_marginTop="10dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/dl_yhm"
                    android:drawablePadding="10dip"
                    android:background="@drawable/input_line"
                    android:hint="@string/str_input_phone"
                    android:singleLine="true"
                    android:padding="10dip"
                    android:text="@={loginModel.phone}" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:drawableStart="@mipmap/dl_mm"
                    android:drawablePadding="10dip"
                    android:background="@drawable/input_line"
                    android:hint="@string/str_input_password"
                    android:inputType="textPassword"
                    android:padding="10dip"
                    android:text="@={loginModel.pwd}" />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:onClick="@{()->loginModel.onLoginClick()}"
                    android:text="@string/str_login"
                    android:textColor="@color/white"
                    android:theme="@style/Button" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dip"
                    android:onClick="@{()->loginModel.onHelpClick()}"
                    android:padding="5dip"
                    android:text="帮助?"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>